--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "@vuepic/vue-datepicker": "^3.1.1",
     "axios": "^0.27.0",
     "bootstrap": "^4.6.0",
+    "chart.js": "^4.4.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "url": "^0.11.0",
     "vue": "^3.2.33",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
